@@ -3484,7 +3484,7 @@ so, the copy will be erased from memory. &nbsp;This area type is
 great
 when you want every player or group to experience a particular area in
 its pristine state, no matter how many of them want to go there at the
-same time.</td>
+same time.<br>These areas can be reset from scripts: MPGSET $a RESET_INSTANCE ''<br>A timeout in ticks using: MPGSET $a TIMEOUT_INSTANCE '240'</td>
 
 
     </tr>
@@ -3538,7 +3538,7 @@ thin copy of the area whose
 name follows. &nbsp;For example, "New_Midgaard" or "New Midgaard"
 would
 create a thin
-version of Midgaard.</td>
+version of Midgaard.<br>These areas can be reset from scripts: MPGSET $a RESET_INSTANCE ''<br>A timeout in ticks using: MPGSET $a TIMEOUT_INSTANCE '240'</td>
 
 
     </tr>
